# just-player

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
just_player/: app.py  core.py  main.py  playlist.py  settings.py  ui.py
scripts/: build_nuitka.ps1
